<resources>
    <string name="app_name">RecipeFinder</string>
    <string name="enter_hint">Enter an ingredient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="intro_text">Find recipes using what you have in your kitchen</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="submit">Submit</string>
    <string name="ingredient">Ingredient</string>
</resources>
