<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.recipefinder.ui.TextInputActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ingredientEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/add"
            android:onClick="btnFunAdd"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/view"
            android:onClick="btnFunView"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorTextHint"
            android:text="@string/submit"
            android:onClick="btnFunSubmit"
            />

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="TextView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_text"
        android:id="@+id/introTextView"
        android:background="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/colorTextIcons" />


</android.support.v4.widget.NestedScrollView>
